[gd_scene load_steps=11 format=3 uid="uid://cuuo53djmjqc0"]

[ext_resource type="Script" path="res://scenes/potions/health_potion.gd" id="1_0ii3f"]
[ext_resource type="Texture2D" uid="uid://ussn2r2ok8yw" path="res://sprites/health_potion_empty.png" id="1_avn3n"]
[ext_resource type="Texture2D" uid="uid://bpr0tsvoh8gqf" path="res://sprites/health_potion_full.png" id="2_lj5bx"]
[ext_resource type="Texture2D" uid="uid://b3yajl8qhfnt" path="res://sprites/health_potion_one_fourth.png" id="3_ycayd"]
[ext_resource type="Texture2D" uid="uid://dypq4wb1bwxci" path="res://sprites/health_potion_three_fourths.png" id="4_c5ixi"]
[ext_resource type="Texture2D" uid="uid://mjgjw5ut55jh" path="res://sprites/health_potion_two_fourths.png" id="5_w165y"]
[ext_resource type="AudioStream" uid="uid://b25fbuuajamad" path="res://sounds/potion_drink_sound.wav" id="7_etxh6"]
[ext_resource type="AudioStream" uid="uid://dijfhy5r705ri" path="res://sounds/potion_recharge.wav" id="8_gjfcd"]
[ext_resource type="AudioStream" uid="uid://dpw4e3ep22hfu" path="res://sounds/potion_fully_charged.wav" id="9_xr0ja"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ckdhb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_avn3n")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lj5bx")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ycayd")
}],
"loop": true,
"name": &"one_fourth",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c5ixi")
}],
"loop": true,
"name": &"three_fourths",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_w165y")
}],
"loop": true,
"name": &"two_fourths",
"speed": 5.0
}]

[node name="HealthPotion" type="Node2D"]
script = ExtResource("1_0ii3f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ckdhb")
animation = &"full"
autoplay = "empty"

[node name="DrinkTimer" type="Timer" parent="."]
wait_time = 1.75
one_shot = true

[node name="DrinkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_etxh6")
volume_db = 11.0
bus = &"Sounds"

[node name="RechargeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gjfcd")
volume_db = 15.0
bus = &"Sounds"

[node name="FullyChargedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_xr0ja")
volume_db = 15.0
bus = &"Sounds"
